[tool.poetry]
name = "ipfs-ix"
version = "0.1.0"
description = "ix.io clone for ipfs"
authors = ["sam <sam@freighttrust.com>"]
license = "GPL-2.0-Only"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
